--- a/coffee-counter/.gitignore
+++ b/coffee-counter/.gitignore
@@ -1,6 +1,6 @@
-*.iml
+# *.iml
 .gradle
-/local.properties
+# /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
@@ -23,7 +23,7 @@ bin/
 gen/
 
 # Local configuration file (sdk path, etc)
-local.properties
+# local.properties
 
 # Eclipse project files
 .classpath
@@ -34,7 +34,7 @@ local.properties
 proguard/
 
 # Intellij project files
-*.iml
+# *.iml
 *.ipr
 *.iws
 .idea/
