--- a/NotificationTest/app/src/main/AndroidManifest.xml
+++ b/NotificationTest/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".CancelNotificationActivity"></activity>
+        <activity android:name=".SendNotificationActivity"></activity>
+        <activity android:name=".ScheduleNotificationActivity"></activity>
     </application>
 
 </manifest>
